--- a/src/components/BlogPage/terry-sso/terry-sso1.mdx
+++ b/src/components/BlogPage/terry-sso/terry-sso1.mdx
@@ -349,6 +349,8 @@ button.addEventListener(
 
 ## Phase Two:
 
+test this is a change made from the editor
+
 Here's the front-end of our login application
 <Code language="typescript">
 {`
